fixed on smaller screens

--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -90,6 +90,10 @@ input[type='range']::-moz-range-thumb {
 }
 
 @media screen and (max-width: 768px) {
+
+  .player {
+    width: 100vw;
+  }
   .time-control {
     width: 90%;
   }
