--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -51,7 +51,7 @@
 
 @media screen and (max-width: 768px) {
   .song-container {
-    img {
+    .album {
       width: 50%;
     }
   }
